// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField snapshots should render TextField 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextField TextField--light"
    data-test-text-field=""
    data-test-tooltip=""
  >
    <div
      class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
      data-test-text-field-wrapper=""
    >
      <input
        class="TextFieldWrapper__input TextFieldWrapper__input--light"
        data-test-text-field-input=""
        maxlength="6"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField snapshots should render with label 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextField TextField--light"
    data-test-text-field=""
    data-test-tooltip=""
  >
    <small
      class="css-1jnxvbp TextFieldLabel TextFieldLabel--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      label
    </small>
    <div
      class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
      data-test-text-field-wrapper=""
    >
      <input
        class="TextFieldWrapper__input TextFieldWrapper__input--light"
        data-test-text-field-input=""
        maxlength="6"
      />
    </div>
  </div>
</DocumentFragment>
`;
